[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/AudioHub.gd" type="Script" id=1]
[ext_resource path="res://Sounds/TomWinandySFX_UI_ScifiTech_Button-Select_36.wav" type="AudioStream" id=2]
[ext_resource path="res://Sounds/TomWinandySFX_UI_ScifiTech_Confirm_08.wav" type="AudioStream" id=3]
[ext_resource path="res://Sounds/TomWinandySFX_UI_ScifiTech_Transition_14.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/TomWinandySFX_UI_ScifiTech_Upgrade-Boost_08.wav" type="AudioStream" id=5]
[ext_resource path="res://Sounds/TomWinandySFX_UI_ScifiTech_Swipe 1.wav" type="AudioStream" id=6]

[node name="AudioHub" type="Node2D"]
script = ExtResource( 1 )

[node name="UIButton" type="Node" parent="."]

[node name="ButtonSelect" type="AudioStreamPlayer" parent="UIButton"]
stream = ExtResource( 2 )
volume_db = -10.0

[node name="ButtonConfirm" type="AudioStreamPlayer" parent="UIButton"]
stream = ExtResource( 3 )
volume_db = -5.0

[node name="Effects" type="Node" parent="."]

[node name="Swoosh" type="AudioStreamPlayer" parent="Effects"]
stream = ExtResource( 4 )
volume_db = -17.0

[node name="Stats(UpgradeBoost8)" type="AudioStreamPlayer" parent="Effects"]
stream = ExtResource( 5 )
volume_db = -5.0

[node name="Swip1" type="AudioStreamPlayer" parent="Effects"]
stream = ExtResource( 6 )
volume_db = -5.0
